replace project images with gifs

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="https://the-breakfast-oven.netlify.app/" class="image featured"><img src="images/restaurant.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/breakfastGif.gif" alt="" /></a>
 										<header>
 											<h3>The Breakfast Oven</h3>
 										</header>
@@ -187,7 +187,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="https://smugglers-lagoon-consulting.netlify.app/" class="image featured"><img src="images/medical.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/medicalGif.gif" alt="" /></a>
 										<header>
 											<h3>Smugglers Lagoon Consulting</h3>
 										</header>
@@ -200,7 +200,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="https://western-culture-photography.netlify.app/" class="image featured"><img src="images/photography.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/photoGif.gif" alt="" /></a>
 										<header>
 											<h3>Western Culture Photography</h3>
 										</header>
@@ -211,7 +211,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="https://community-grocer.netlify.app/" class="image featured"><img src="images/grocery.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/grocerGif.gif" alt="" /></a>
 										<header>
 											<h3>Payless Foods Store</h3>
 										</header>
