--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 							<div class="row">
 								<div class="col-6 col-12-narrower">
 
-									<section>
-										<a href="#" class="image featured"><img src="images/breakfastGif.gif" alt="" /></a>
+									<section id="restaurant">
+										<a href="#restaurant" class="image featured"><img src="images/breakfastGif.gif" alt="" /></a>
 										<header>
 											<h3>The Breakfast Oven</h3>
 										</header>
@@ -186,8 +186,8 @@
 								</div>
 								<div class="col-6 col-12-narrower">
 
-									<section>
-										<a href="#" class="image featured"><img src="images/medicalGif.gif" alt="" /></a>
+									<section id="medical">
+										<a href="#medical" class="image featured"><img src="images/medicalGif.gif" alt="" /></a>
 										<header>
 											<h3>Smugglers Lagoon Consulting</h3>
 										</header>
@@ -199,8 +199,8 @@
 							<div class="row">
 								<div class="col-6 col-12-narrower">
 
-									<section>
-										<a href="#" class="image featured"><img src="images/photoGif.gif" alt="" /></a>
+									<section id="photography">
+										<a href="#photography" class="image featured"><img src="images/photoGif.gif" alt="" /></a>
 										<header>
 											<h3>Western Culture Photography</h3>
 										</header>
@@ -210,8 +210,8 @@
 								</div>
 								<div class="col-6 col-12-narrower">
 
-									<section>
-										<a href="#" class="image featured"><img src="images/grocerGif.gif" alt="" /></a>
+									<section id="grocery">
+										<a href="#grocery" class="image featured"><img src="images/grocerGif.gif" alt="" /></a>
 										<header>
 											<h3>Payless Foods Store</h3>
 										</header>
