--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section id="restaurant">
-										<a href="#restaurant" class="image featured"><img src="images/breakfastGif.gif" alt="" /></a>
+										<a href="#recentProjects" class="image featured"><img src="images/breakfastGif.gif" alt="" /></a>
 										<header>
 											<h3>The Breakfast Oven</h3>
 										</header>
@@ -187,7 +187,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section id="medical">
-										<a href="#medical" class="image featured"><img src="images/medicalGif.gif" alt="" /></a>
+										<a href="#recentProjects" class="image featured"><img src="images/medicalGif.gif" alt="" /></a>
 										<header>
 											<h3>Smugglers Lagoon Consulting</h3>
 										</header>
@@ -200,7 +200,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section id="photography">
-										<a href="#photography" class="image featured"><img src="images/photoGif.gif" alt="" /></a>
+										<a href="#recentProjects" class="image featured"><img src="images/photoGif.gif" alt="" /></a>
 										<header>
 											<h3>Western Culture Photography</h3>
 										</header>
@@ -211,7 +211,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section id="grocery">
-										<a href="#grocery" class="image featured"><img src="images/grocerGif.gif" alt="" /></a>
+										<a href="#recentProjects" class="image featured"><img src="images/grocerGif.gif" alt="" /></a>
 										<header>
 											<h3>Payless Foods Store</h3>
 										</header>
