--- a/about-me.html
+++ b/about-me.html
@@ -54,7 +54,7 @@
 							<!-- Content -->
 								<div class="content">
 									<section>
-										<a href="#" class="image featured"><img src="images/coupe.jpg" alt="" /></a>
+										<img class="image featured" src="images/coupe.jpg" alt="" />
 										<header>
 											
 										</header>
