--- a/personal-project.html
+++ b/personal-project.html
@@ -69,7 +69,7 @@
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03441/opgs/edr/ncam/NRB_702958292EDR_S0940634NCAM00594M_.JPG" alt="" /></a>
+												<img class="image featured" src="https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/03441/opgs/edr/ncam/NRB_702958292EDR_S0940634NCAM00594M_.JPG" alt="" />
 												<header>
 													<h3>Mars Rover Camera</h3>
 												</header>
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" id="apod" class="image featured"><img src="https://apod.nasa.gov/apod/image/2204/PlanetBridge_Honda_3000.jpg" alt="" /></a>
+												<img id="apod" class="image featured" src="https://apod.nasa.gov/apod/image/2204/PlanetBridge_Honda_3000.jpg" alt="" />
 												<header>
 													<!-- <h3>Provide 3 paragraph explanation of the project</h3> -->
 												</header>
