--- a/personal-project.html
+++ b/personal-project.html
@@ -88,7 +88,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<img id="apod" class="image featured" src="https://apod.nasa.gov/apod/image/2204/PlanetBridge_Honda_3000.jpg" alt="" />
+												<img id="apod" class="image featured" src="" alt="" />
 												<header>
 													<!-- <h3>Provide 3 paragraph explanation of the project</h3> -->
 												</header>
