--- a/personal-project.html
+++ b/personal-project.html
@@ -63,7 +63,7 @@
 												<p>Enter a date, and click 'Get Picture' to view NASA's picture of the day, along with a description of the photo.</p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="https://henrysnasasite.netlify.app/index.html" class="button small">Go To Site</a></li>
+														<li><a href="https://henryspaceodyssey.netlify.app/" class="button small">Go To Site</a></li>
 													</ul>
 												</footer>
 											</section>
@@ -76,7 +76,7 @@
 												<p>Similar to the Astrological Picture of the Day, users can input a date to view image data gathered by NASA's Curiousity, Opportunity, and Spirit rovers on Mars. </p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="https://henrysnasasite.netlify.app/marsrover/" class="button small">Learn More</a></li>
+														<li><a href="https://henryspaceodyssey.netlify.app/marsrover/" class="button small">Learn More</a></li>
 													</ul>
 												</footer>
 											</section>
