--- a/about-me.html
+++ b/about-me.html
@@ -59,9 +59,10 @@
 											
 										</header>
 										<p>Hi, my name is David.  </p>
-										<p>I'm sure by now you can see that I like to code. But what else do I like to spend my time on?</p>
-										<p>Being from the Pacific Northwest, I like to take advantage of the good weather when we have it. Sometimes that means spending time in the garden with my family, and other times it's throwing the ball for our two German Shepherds at the dog park.  </p>
-										<p>On the gloomier days I enjoy picking up my guitar and making mediocre music, reading a book, or playing some video games.</p>
+										<p>I am a Marine Corps veteran and former Firefighter/EMT turned Software Engineer.</p>
+										<p>During my 5 years of service in the Marine Corps, I was introduced to programming when I lead a small team in the creation of an inventory tracking program, which led to a 3-year period of no losses and improved workflow. After being honorably discharged, I was a Firefighter/EMT, where my accomplishments include a Unit Citation for the successful rescue of a person trapped inside a fire.  </p>
+										<p>Once I started a family, I took this opportunity to transition out of dangerous roles to pursue a career in tech. In taking computer science courses, I developed skills in HTML, CSS, and JavaScript, all while being a stay-at-home father. Additionally, I freelanced for a bit before deciding to return to the traditional workforce.</p>
+										<p>Please feel free to reach out if you have any software engineering opportunities available. </p>
 									</section>
 								</div>
 
