--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 									<section id="grocery">
 										<img id="myImage4" class="image featured" src="images/grocerGif.gif" alt="" />
 										<header>
-											<h3>Payless Foods Store</h3>
+											<h3>Community Grocer</h3>
 										</header>
 										<p>A locally owned grocery store serving the communities on the south end of scenic Whidbey Island, Washington.  </p>
 									</section>
