--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 										<header>
 											<h3>Community Grocer</h3>
 										</header>
-										<p>A locally owned grocery store serving the communities on the south end of scenic Whidbey Island, Washington.  </p>
+										<p>A locally owned and operated grocery store serving a small collective of communities in the Pacific Northwest.  </p>
 									</section>
 
 								</div>
